Enforce white background color in body to ensure specific user-agents don't apply their own styling. Sync with Solbit horizontalAlignContainer inclusion and Categories / Tags + Users icons adding.

--- a/src/less/core.less
+++ b/src/less/core.less
@@ -32,6 +32,8 @@
 // #endregion
 
 body {
+	background-color: white; // Ensure specific user-agents don't apply their own styling.
+
 	h1, h2, h3, h4, h5, h6 { // Headers
 		font-weight: normal;
 	}
